@@ -36,24 +36,13 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.IntStream;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.CsvSource;
-
-import java.io.File;
-import java.io.FileWriter;
-import java.io.IOException;
-import java.nio.file.Files;
-import java.util.List;
-import java.util.Map;
-import java.util.stream.IntStream;
-
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.Mockito.mock;
 
 public class ProtocolAdapterExtractorTest {
     @TempDir
@@ -165,10 +154,9 @@ public class ProtocolAdapterExtractorTest {
     @ParameterizedTest
     @CsvSource({"true,0", "true,1", "true,2", "false,-1", "false,3", "false,abc"})
     public void whenNorthboundMappingQoSIsProvided_thenApplyConfigShouldWorkAsExpected(
-            final boolean valid,
-            final @NotNull String maxQoS)
-            throws IOException {
-        final ConfigFileReaderWriter configFileReader = getConfigFileReaderWriter(StringTemplate.format("""
+            final boolean valid, final @NotNull String maxQoS) throws IOException {
+        final ConfigFileReaderWriter configFileReader =
+                getConfigFileReaderWriter(StringTemplate.format("""
                 <hivemq>
                   <protocol-adapters>
                     <protocol-adapter>
@@ -208,10 +196,9 @@ public class ProtocolAdapterExtractorTest {
     @ParameterizedTest
     @CsvSource({"true,true", "true,false", "false,abc"})
     public void whenNorthboundMappingIncludeTagNamesIsProvided_thenApplyConfigShouldWorkAsExpected(
-            final boolean valid,
-            final @NotNull String includeTagNames)
-            throws IOException {
-        final ConfigFileReaderWriter configFileReader = getConfigFileReaderWriter(StringTemplate.format("""
+            final boolean valid, final @NotNull String includeTagNames) throws IOException {
+        final ConfigFileReaderWriter configFileReader =
+                getConfigFileReaderWriter(StringTemplate.format("""
                 <hivemq>
                   <protocol-adapters>
                     <protocol-adapter>
@@ -251,10 +238,9 @@ public class ProtocolAdapterExtractorTest {
     @ParameterizedTest
     @CsvSource({"true,true", "true,false", "false,abc"})
     public void whenNorthboundMappingIncludeTimestampIsProvided_thenApplyConfigShouldWorkAsExpected(
-            final boolean valid,
-            final @NotNull String includeTimestamp)
-            throws IOException {
-        final ConfigFileReaderWriter configFileReader = getConfigFileReaderWriter(StringTemplate.format("""
+            final boolean valid, final @NotNull String includeTimestamp) throws IOException {
+        final ConfigFileReaderWriter configFileReader =
+                getConfigFileReaderWriter(StringTemplate.format("""
                 <hivemq>
                   <protocol-adapters>
                     <protocol-adapter>
@@ -294,10 +280,9 @@ public class ProtocolAdapterExtractorTest {
     @ParameterizedTest
     @CsvSource({"true,1", "true,123", "false,0", "false,-1", "false,abc"})
     public void whenNorthboundMappingMessageExpiryIntervalIsProvided_thenApplyConfigShouldWorkAsExpected(
-            final boolean valid,
-            final @NotNull String messageExpiryInterval)
-            throws IOException {
-        final ConfigFileReaderWriter configFileReader = getConfigFileReaderWriter(StringTemplate.format("""
+            final boolean valid, final @NotNull String messageExpiryInterval) throws IOException {
+        final ConfigFileReaderWriter configFileReader = getConfigFileReaderWriter(
+                StringTemplate.format("""
                 <hivemq>
                   <protocol-adapters>
                     <protocol-adapter>
@@ -565,13 +550,8 @@ public class ProtocolAdapterExtractorTest {
         assertThat(entity).isNotNull();
         final SouthboundMappingEntity southboundMappingEntity =
                 new SouthboundMappingEntity(tagName, topicFilter, new FieldMappingEntity(), schema);
-        final ProtocolAdapterEntity protocolAdapterEntity = new ProtocolAdapterEntity("adapterId",
-                "protocolId",
-                1,
-                Map.of(),
-                List.of(),
-                List.of(southboundMappingEntity),
-                List.of());
+        final ProtocolAdapterEntity protocolAdapterEntity = new ProtocolAdapterEntity(
+                "adapterId", "protocolId", 1, Map.of(), List.of(), List.of(southboundMappingEntity), List.of());
         entity.getProtocolAdapterConfig().add(protocolAdapterEntity);
         assertThat(configFileReader.internalApplyConfig(entity)).isFalse();
     }
@@ -580,113 +560,25 @@ public class ProtocolAdapterExtractorTest {
     public void whenNoDuplicatedTags_thenAddAdapterReturnsTrue() throws IOException {
         final ConfigFileReaderWriter configFileReader = getConfigFileReaderWriter();
         final ProtocolAdapterExtractor protocolAdapterExtractor = configFileReader.getProtocolAdapterExtractor();
-        assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity("adapterId",
-                "protocolId",
-                1,
-                Map.of(),
-                List.of(),
-                List.of(),
-                IntStream.range(0, 10)
-                        .mapToObj(i -> new TagEntity("tag" + i, "description" + i, Map.of()))
-                        .toList()))).isTrue();
-    }
-
-    @Test
-    public void whenNoDuplicatedTags_thenUpdateAdapterReturnsTrue() throws IOException {
-        final ConfigFileReaderWriter configFileReader = getConfigFileReaderWriter();
-        final ProtocolAdapterExtractor protocolAdapterExtractor = configFileReader.getProtocolAdapterExtractor();
-        assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity("adapterId",
-                "protocolId",
-                1,
-                Map.of(),
-                List.of(),
-                List.of(),
-                IntStream.range(0, 5)
-                        .mapToObj(i -> new TagEntity("tag" + i, "description" + i, Map.of()))
-                        .toList()))).isTrue();
-        assertThat(protocolAdapterExtractor.updateAdapter(new ProtocolAdapterEntity("adapterId",
-                "protocolId",
-                1,
-                Map.of(),
-                List.of(),
-                List.of(),
-                IntStream.range(0, 10)
-                        .mapToObj(i -> new TagEntity("tag" + i, "description" + i, Map.of()))
-                        .toList()))).isTrue();
-    }
-
-    @Test
-    public void whenNoDuplicatedTags_thenUpdateAllAdaptersReturnsTrue() throws IOException {
-        final ConfigFileReaderWriter configFileReader = getConfigFileReaderWriter();
-        final ProtocolAdapterExtractor protocolAdapterExtractor = configFileReader.getProtocolAdapterExtractor();
-        IntStream.range(0, 10)
-                .forEach(j -> assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity("adapterId" + j,
-                        "protocolId",
-                        1,
-                        Map.of(),
-                        List.of(),
-                        List.of(),
-                        IntStream.range(0, 5)
-                                .mapToObj(i -> new TagEntity("tag" + i, "description" + i, Map.of()))
-                                .toList()))).isTrue());
-        assertThat(protocolAdapterExtractor.updateAllAdapters(IntStream.range(0, 10)
-                .mapToObj(j -> new ProtocolAdapterEntity("adapterId" + j,
+        assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity(
+                        "adapterId",
                         "protocolId",
                         1,
                         Map.of(),
                         List.of(),
                         List.of(),
                         IntStream.range(0, 10)
-                                .mapToObj(i -> new TagEntity("tag123" + i, "description" + i, Map.of()))
-                                .toList()))
-                .toList())).isEqualTo(Configurator.ConfigResult.SUCCESS);
+                                .mapToObj(i -> new TagEntity("tag" + i, "description" + i, Map.of()))
+                                .toList())))
+                .isTrue();
     }
 
     @Test
-    public void whenDuplicatedTags_thenAddAdapterReturnsFalse() throws IOException {
+    public void whenNoDuplicatedTags_thenUpdateAdapterReturnsTrue() throws IOException {
         final ConfigFileReaderWriter configFileReader = getConfigFileReaderWriter();
         final ProtocolAdapterExtractor protocolAdapterExtractor = configFileReader.getProtocolAdapterExtractor();
-        assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity("adapterId",
-                "protocolId",
-                1,
-                Map.of(),
-                List.of(),
-                List.of(),
-                IntStream.range(0, 10)
-                        .mapToObj(i -> new TagEntity("tag", "description", Map.of()))
-                        .toList()))).isFalse();
-    }
-
-    @Test
-    public void whenDuplicatedTags_thenUpdateAdapterReturnsFalse() throws IOException {
-        final ConfigFileReaderWriter configFileReader = getConfigFileReaderWriter();
-        final ProtocolAdapterExtractor protocolAdapterExtractor = configFileReader.getProtocolAdapterExtractor();
-        assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity("adapterId",
-                "protocolId",
-                1,
-                Map.of(),
-                List.of(),
-                List.of(),
-                IntStream.range(0, 5)
-                        .mapToObj(i -> new TagEntity("tag" + i, "description" + i, Map.of()))
-                        .toList()))).isTrue();
-        assertThat(protocolAdapterExtractor.updateAdapter(new ProtocolAdapterEntity("adapterId",
-                "protocolId",
-                1,
-                Map.of(),
-                List.of(),
-                List.of(),
-                IntStream.range(0, 10)
-                        .mapToObj(i -> new TagEntity("tag", "description", Map.of()))
-                        .toList()))).isFalse();
-    }
-
-    @Test
-    public void whenDuplicatedTags_thenUpdateAllAdaptersReturnsFalse() throws IOException {
-        final ConfigFileReaderWriter configFileReader = getConfigFileReaderWriter();
-        final ProtocolAdapterExtractor protocolAdapterExtractor = configFileReader.getProtocolAdapterExtractor();
-        IntStream.range(0, 10)
-                .forEach(j -> assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity("adapterId" + j,
+        assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity(
+                        "adapterId",
                         "protocolId",
                         1,
                         Map.of(),
@@ -694,31 +586,141 @@ public class ProtocolAdapterExtractorTest {
                         List.of(),
                         IntStream.range(0, 5)
                                 .mapToObj(i -> new TagEntity("tag" + i, "description" + i, Map.of()))
-                                .toList()))).isTrue());
-        assertThat(protocolAdapterExtractor.updateAllAdapters(IntStream.range(0, 10)
-                .mapToObj(j -> new ProtocolAdapterEntity("adapterId" + j,
+                                .toList())))
+                .isTrue();
+        assertThat(protocolAdapterExtractor.updateAdapter(new ProtocolAdapterEntity(
+                        "adapterId",
                         "protocolId",
                         1,
                         Map.of(),
                         List.of(),
                         List.of(),
-                        IntStream.range(0, 10).mapToObj(i -> new TagEntity("tag", "description", Map.of())).toList()))
-                .toList())).isEqualTo(Configurator.ConfigResult.ERROR);
+                        IntStream.range(0, 10)
+                                .mapToObj(i -> new TagEntity("tag" + i, "description" + i, Map.of()))
+                                .toList())))
+                .isTrue();
+    }
+
+    @Test
+    public void whenNoDuplicatedTags_thenUpdateAllAdaptersReturnsTrue() throws IOException {
+        final ConfigFileReaderWriter configFileReader = getConfigFileReaderWriter();
+        final ProtocolAdapterExtractor protocolAdapterExtractor = configFileReader.getProtocolAdapterExtractor();
+        IntStream.range(0, 10).forEach(j -> assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity(
+                        "adapterId" + j,
+                        "protocolId",
+                        1,
+                        Map.of(),
+                        List.of(),
+                        List.of(),
+                        IntStream.range(0, 5)
+                                .mapToObj(i -> new TagEntity("tag" + i, "description" + i, Map.of()))
+                                .toList())))
+                .isTrue());
+        assertThat(protocolAdapterExtractor.updateAllAdapters(IntStream.range(0, 10)
+                        .mapToObj(j -> new ProtocolAdapterEntity(
+                                "adapterId" + j,
+                                "protocolId",
+                                1,
+                                Map.of(),
+                                List.of(),
+                                List.of(),
+                                IntStream.range(0, 10)
+                                        .mapToObj(i -> new TagEntity("tag123" + i, "description" + i, Map.of()))
+                                        .toList()))
+                        .toList()))
+                .isEqualTo(Configurator.ConfigResult.SUCCESS);
+    }
+
+    @Test
+    public void whenDuplicatedTags_thenAddAdapterReturnsFalse() throws IOException {
+        final ConfigFileReaderWriter configFileReader = getConfigFileReaderWriter();
+        final ProtocolAdapterExtractor protocolAdapterExtractor = configFileReader.getProtocolAdapterExtractor();
+        assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity(
+                        "adapterId",
+                        "protocolId",
+                        1,
+                        Map.of(),
+                        List.of(),
+                        List.of(),
+                        IntStream.range(0, 10)
+                                .mapToObj(i -> new TagEntity("tag", "description", Map.of()))
+                                .toList())))
+                .isFalse();
+    }
+
+    @Test
+    public void whenDuplicatedTags_thenUpdateAdapterReturnsFalse() throws IOException {
+        final ConfigFileReaderWriter configFileReader = getConfigFileReaderWriter();
+        final ProtocolAdapterExtractor protocolAdapterExtractor = configFileReader.getProtocolAdapterExtractor();
+        assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity(
+                        "adapterId",
+                        "protocolId",
+                        1,
+                        Map.of(),
+                        List.of(),
+                        List.of(),
+                        IntStream.range(0, 5)
+                                .mapToObj(i -> new TagEntity("tag" + i, "description" + i, Map.of()))
+                                .toList())))
+                .isTrue();
+        assertThat(protocolAdapterExtractor.updateAdapter(new ProtocolAdapterEntity(
+                        "adapterId",
+                        "protocolId",
+                        1,
+                        Map.of(),
+                        List.of(),
+                        List.of(),
+                        IntStream.range(0, 10)
+                                .mapToObj(i -> new TagEntity("tag", "description", Map.of()))
+                                .toList())))
+                .isFalse();
+    }
+
+    @Test
+    public void whenDuplicatedTags_thenUpdateAllAdaptersReturnsFalse() throws IOException {
+        final ConfigFileReaderWriter configFileReader = getConfigFileReaderWriter();
+        final ProtocolAdapterExtractor protocolAdapterExtractor = configFileReader.getProtocolAdapterExtractor();
+        IntStream.range(0, 10).forEach(j -> assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity(
+                        "adapterId" + j,
+                        "protocolId",
+                        1,
+                        Map.of(),
+                        List.of(),
+                        List.of(),
+                        IntStream.range(0, 5)
+                                .mapToObj(i -> new TagEntity("tag" + i, "description" + i, Map.of()))
+                                .toList())))
+                .isTrue());
+        assertThat(protocolAdapterExtractor.updateAllAdapters(IntStream.range(0, 10)
+                        .mapToObj(j -> new ProtocolAdapterEntity(
+                                "adapterId" + j,
+                                "protocolId",
+                                1,
+                                Map.of(),
+                                List.of(),
+                                List.of(),
+                                IntStream.range(0, 10)
+                                        .mapToObj(i -> new TagEntity("tag", "description", Map.of()))
+                                        .toList()))
+                        .toList()))
+                .isEqualTo(Configurator.ConfigResult.ERROR);
     }
 
     @Test
     public void whenAdapterExists_thenDeleteAdapterReturnsTrue() throws IOException {
         final ConfigFileReaderWriter configFileReader = getConfigFileReaderWriter();
         final ProtocolAdapterExtractor protocolAdapterExtractor = configFileReader.getProtocolAdapterExtractor();
-        assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity("adapterId",
-                "protocolId",
-                1,
-                Map.of(),
-                List.of(),
-                List.of(),
-                IntStream.range(0, 5)
-                        .mapToObj(i -> new TagEntity("tag" + i, "description" + i, Map.of()))
-                        .toList()))).isTrue();
+        assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity(
+                        "adapterId",
+                        "protocolId",
+                        1,
+                        Map.of(),
+                        List.of(),
+                        List.of(),
+                        IntStream.range(0, 5)
+                                .mapToObj(i -> new TagEntity("tag" + i, "description" + i, Map.of()))
+                                .toList())))
+                .isTrue();
         assertThat(protocolAdapterExtractor.deleteAdapter("adapterId")).isTrue();
     }
 
@@ -737,23 +739,27 @@ public class ProtocolAdapterExtractorTest {
         final ProtocolAdapterExtractor protocolAdapterExtractor = configFileReader.getProtocolAdapterExtractor();
 
         // Add first adapter with tag "sharedTag"
-        assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity("adapter1",
-                "protocolId",
-                1,
-                Map.of(),
-                List.of(),
-                List.of(),
-                List.of(new TagEntity("sharedTag", "description1", Map.of()))))).isTrue();
+        assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity(
+                        "adapter1",
+                        "protocolId",
+                        1,
+                        Map.of(),
+                        List.of(),
+                        List.of(),
+                        List.of(new TagEntity("sharedTag", "description1", Map.of())))))
+                .isTrue();
 
         // Add second adapter with the same tag name "sharedTag" - should succeed
         // because deduplication is by (adapterId, tagName), not just tagName
-        assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity("adapter2",
-                "protocolId",
-                1,
-                Map.of(),
-                List.of(),
-                List.of(),
-                List.of(new TagEntity("sharedTag", "description2", Map.of()))))).isTrue();
+        assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity(
+                        "adapter2",
+                        "protocolId",
+                        1,
+                        Map.of(),
+                        List.of(),
+                        List.of(),
+                        List.of(new TagEntity("sharedTag", "description2", Map.of())))))
+                .isTrue();
 
         assertThat(protocolAdapterExtractor.getAllConfigs()).hasSize(2);
     }
@@ -764,29 +770,32 @@ public class ProtocolAdapterExtractorTest {
         final ProtocolAdapterExtractor protocolAdapterExtractor = configFileReader.getProtocolAdapterExtractor();
 
         // Update all adapters with multiple adapters having the same tag name
-        assertThat(protocolAdapterExtractor.updateAllAdapters(List.of(new ProtocolAdapterEntity("adapter1",
-                        "protocolId",
-                        1,
-                        Map.of(),
-                        List.of(),
-                        List.of(),
-                        List.of(new TagEntity("sharedTag", "description1", Map.of()))),
-                new ProtocolAdapterEntity("adapter2",
-                        "protocolId",
-                        1,
-                        Map.of(),
-                        List.of(),
-                        List.of(),
-                        List.of(new TagEntity("sharedTag", "description2", Map.of()))),
-                new ProtocolAdapterEntity("adapter3",
-                        "protocolId",
-                        1,
-                        Map.of(),
-                        List.of(),
-                        List.of(),
-                        List.of(new TagEntity("sharedTag",
-                                "description3",
-                                Map.of())))))).isEqualTo(Configurator.ConfigResult.SUCCESS);
+        assertThat(protocolAdapterExtractor.updateAllAdapters(List.of(
+                        new ProtocolAdapterEntity(
+                                "adapter1",
+                                "protocolId",
+                                1,
+                                Map.of(),
+                                List.of(),
+                                List.of(),
+                                List.of(new TagEntity("sharedTag", "description1", Map.of()))),
+                        new ProtocolAdapterEntity(
+                                "adapter2",
+                                "protocolId",
+                                1,
+                                Map.of(),
+                                List.of(),
+                                List.of(),
+                                List.of(new TagEntity("sharedTag", "description2", Map.of()))),
+                        new ProtocolAdapterEntity(
+                                "adapter3",
+                                "protocolId",
+                                1,
+                                Map.of(),
+                                List.of(),
+                                List.of(),
+                                List.of(new TagEntity("sharedTag", "description3", Map.of()))))))
+                .isEqualTo(Configurator.ConfigResult.SUCCESS);
 
         assertThat(protocolAdapterExtractor.getAllConfigs()).hasSize(3);
     }
@@ -797,32 +806,38 @@ public class ProtocolAdapterExtractorTest {
         final ProtocolAdapterExtractor protocolAdapterExtractor = configFileReader.getProtocolAdapterExtractor();
 
         // Add first adapter with tag "existingTag"
-        assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity("adapter1",
-                "protocolId",
-                1,
-                Map.of(),
-                List.of(),
-                List.of(),
-                List.of(new TagEntity("existingTag", "description1", Map.of()))))).isTrue();
+        assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity(
+                        "adapter1",
+                        "protocolId",
+                        1,
+                        Map.of(),
+                        List.of(),
+                        List.of(),
+                        List.of(new TagEntity("existingTag", "description1", Map.of())))))
+                .isTrue();
 
         // Add second adapter with different tag
-        assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity("adapter2",
-                "protocolId",
-                1,
-                Map.of(),
-                List.of(),
-                List.of(),
-                List.of(new TagEntity("otherTag", "description2", Map.of()))))).isTrue();
+        assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity(
+                        "adapter2",
+                        "protocolId",
+                        1,
+                        Map.of(),
+                        List.of(),
+                        List.of(),
+                        List.of(new TagEntity("otherTag", "description2", Map.of())))))
+                .isTrue();
 
         // Update second adapter to use "existingTag" - should succeed
         // because (adapter2, existingTag) is different from (adapter1, existingTag)
-        assertThat(protocolAdapterExtractor.updateAdapter(new ProtocolAdapterEntity("adapter2",
-                "protocolId",
-                1,
-                Map.of(),
-                List.of(),
-                List.of(),
-                List.of(new TagEntity("existingTag", "updated description", Map.of()))))).isTrue();
+        assertThat(protocolAdapterExtractor.updateAdapter(new ProtocolAdapterEntity(
+                        "adapter2",
+                        "protocolId",
+                        1,
+                        Map.of(),
+                        List.of(),
+                        List.of(),
+                        List.of(new TagEntity("existingTag", "updated description", Map.of())))))
+                .isTrue();
     }
 
     @Test
@@ -831,28 +846,34 @@ public class ProtocolAdapterExtractorTest {
         final ProtocolAdapterExtractor protocolAdapterExtractor = configFileReader.getProtocolAdapterExtractor();
 
         // Add first adapter with tags
-        assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity("adapter1",
-                "protocolId",
-                1,
-                Map.of(),
-                List.of(),
-                List.of(),
-                List.of(new TagEntity("tag1", "description1", Map.of()),
-                        new TagEntity("tag2", "description2", Map.of()))))).isTrue();
+        assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity(
+                        "adapter1",
+                        "protocolId",
+                        1,
+                        Map.of(),
+                        List.of(),
+                        List.of(),
+                        List.of(
+                                new TagEntity("tag1", "description1", Map.of()),
+                                new TagEntity("tag2", "description2", Map.of())))))
+                .isTrue();
 
         // Delete the adapter
         assertThat(protocolAdapterExtractor.deleteAdapter("adapter1")).isTrue();
 
         // Add another adapter with the same adapter ID and same tags - should succeed
         // because the old tags were removed from the dedup set
-        assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity("adapter1",
-                "protocolId",
-                1,
-                Map.of(),
-                List.of(),
-                List.of(),
-                List.of(new TagEntity("tag1", "new description1", Map.of()),
-                        new TagEntity("tag2", "new description2", Map.of()))))).isTrue();
+        assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity(
+                        "adapter1",
+                        "protocolId",
+                        1,
+                        Map.of(),
+                        List.of(),
+                        List.of(),
+                        List.of(
+                                new TagEntity("tag1", "new description1", Map.of()),
+                                new TagEntity("tag2", "new description2", Map.of())))))
+                .isTrue();
     }
 
     @Test
@@ -861,14 +882,17 @@ public class ProtocolAdapterExtractorTest {
         final ProtocolAdapterExtractor protocolAdapterExtractor = configFileReader.getProtocolAdapterExtractor();
 
         // Try to add adapter with duplicate tag names within the same adapter
-        assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity("adapter1",
-                "protocolId",
-                1,
-                Map.of(),
-                List.of(),
-                List.of(),
-                List.of(new TagEntity("duplicateTag", "description1", Map.of()),
-                        new TagEntity("duplicateTag", "description2", Map.of()))))).isFalse();
+        assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity(
+                        "adapter1",
+                        "protocolId",
+                        1,
+                        Map.of(),
+                        List.of(),
+                        List.of(),
+                        List.of(
+                                new TagEntity("duplicateTag", "description1", Map.of()),
+                                new TagEntity("duplicateTag", "description2", Map.of())))))
+                .isFalse();
 
         assertThat(protocolAdapterExtractor.getAllConfigs()).isEmpty();
     }
@@ -879,29 +903,42 @@ public class ProtocolAdapterExtractorTest {
         final ProtocolAdapterExtractor protocolAdapterExtractor = configFileReader.getProtocolAdapterExtractor();
 
         // Add adapter with unique tags
-        assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity("adapter1",
-                "protocolId",
-                1,
-                Map.of(),
-                List.of(),
-                List.of(),
-                List.of(new TagEntity("tag1", "description1", Map.of()),
-                        new TagEntity("tag2", "description2", Map.of()))))).isTrue();
+        assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity(
+                        "adapter1",
+                        "protocolId",
+                        1,
+                        Map.of(),
+                        List.of(),
+                        List.of(),
+                        List.of(
+                                new TagEntity("tag1", "description1", Map.of()),
+                                new TagEntity("tag2", "description2", Map.of())))))
+                .isTrue();
 
         // Try to update with duplicate tag names within the same adapter
-        assertThat(protocolAdapterExtractor.updateAdapter(new ProtocolAdapterEntity("adapter1",
-                "protocolId",
-                1,
-                Map.of(),
-                List.of(),
-                List.of(),
-                List.of(new TagEntity("duplicateTag", "description1", Map.of()),
-                        new TagEntity("duplicateTag", "description2", Map.of()))))).isFalse();
+        assertThat(protocolAdapterExtractor.updateAdapter(new ProtocolAdapterEntity(
+                        "adapter1",
+                        "protocolId",
+                        1,
+                        Map.of(),
+                        List.of(),
+                        List.of(),
+                        List.of(
+                                new TagEntity("duplicateTag", "description1", Map.of()),
+                                new TagEntity("duplicateTag", "description2", Map.of())))))
+                .isFalse();
 
         // Original adapter should remain unchanged
         assertThat(protocolAdapterExtractor.getAllConfigs()).hasSize(1);
-        assertThat(protocolAdapterExtractor.getAllConfigs().getFirst().getTags()).hasSize(2);
-        assertThat(protocolAdapterExtractor.getAllConfigs().getFirst().getTags().get(0).getName()).isEqualTo("tag1");
+        assertThat(protocolAdapterExtractor.getAllConfigs().getFirst().getTags())
+                .hasSize(2);
+        assertThat(protocolAdapterExtractor
+                        .getAllConfigs()
+                        .getFirst()
+                        .getTags()
+                        .get(0)
+                        .getName())
+                .isEqualTo("tag1");
     }
 
     @Test
@@ -911,23 +948,26 @@ public class ProtocolAdapterExtractorTest {
         final ProtocolAdapterExtractor protocolAdapterExtractor = configFileReader.getProtocolAdapterExtractor();
 
         // Try to update all adapters where one adapter has duplicate tag names
-        assertThat(protocolAdapterExtractor.updateAllAdapters(List.of(new ProtocolAdapterEntity("adapter1",
-                        "protocolId",
-                        1,
-                        Map.of(),
-                        List.of(),
-                        List.of(),
-                        List.of(new TagEntity("uniqueTag", "description1", Map.of()))),
-                new ProtocolAdapterEntity("adapter2",
-                        "protocolId",
-                        1,
-                        Map.of(),
-                        List.of(),
-                        List.of(),
-                        List.of(new TagEntity("duplicateTag", "description1", Map.of()),
-                                new TagEntity("duplicateTag",
-                                        "description2",
-                                        Map.of())))))).isEqualTo(Configurator.ConfigResult.ERROR);
+        assertThat(protocolAdapterExtractor.updateAllAdapters(List.of(
+                        new ProtocolAdapterEntity(
+                                "adapter1",
+                                "protocolId",
+                                1,
+                                Map.of(),
+                                List.of(),
+                                List.of(),
+                                List.of(new TagEntity("uniqueTag", "description1", Map.of()))),
+                        new ProtocolAdapterEntity(
+                                "adapter2",
+                                "protocolId",
+                                1,
+                                Map.of(),
+                                List.of(),
+                                List.of(),
+                                List.of(
+                                        new TagEntity("duplicateTag", "description1", Map.of()),
+                                        new TagEntity("duplicateTag", "description2", Map.of()))))))
+                .isEqualTo(Configurator.ConfigResult.ERROR);
     }
 
     @Test
@@ -936,57 +976,68 @@ public class ProtocolAdapterExtractorTest {
         final ProtocolAdapterExtractor protocolAdapterExtractor = configFileReader.getProtocolAdapterExtractor();
 
         // Add adapter1 with tags [tag1, tag2]
-        assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity("adapter1",
-                "protocolId",
-                1,
-                Map.of(),
-                List.of(),
-                List.of(),
-                List.of(new TagEntity("tag1", "desc", Map.of()), new TagEntity("tag2", "desc", Map.of()))))).isTrue();
+        assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity(
+                        "adapter1",
+                        "protocolId",
+                        1,
+                        Map.of(),
+                        List.of(),
+                        List.of(),
+                        List.of(new TagEntity("tag1", "desc", Map.of()), new TagEntity("tag2", "desc", Map.of())))))
+                .isTrue();
 
         // Add adapter2 with tags [tag1, tag3] - tag1 is shared, should succeed
-        assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity("adapter2",
-                "protocolId",
-                1,
-                Map.of(),
-                List.of(),
-                List.of(),
-                List.of(new TagEntity("tag1", "desc", Map.of()), new TagEntity("tag3", "desc", Map.of()))))).isTrue();
+        assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity(
+                        "adapter2",
+                        "protocolId",
+                        1,
+                        Map.of(),
+                        List.of(),
+                        List.of(),
+                        List.of(new TagEntity("tag1", "desc", Map.of()), new TagEntity("tag3", "desc", Map.of())))))
+                .isTrue();
 
         // Add adapter3 with tags [tag2, tag3] - both shared, should succeed
-        assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity("adapter3",
-                "protocolId",
-                1,
-                Map.of(),
-                List.of(),
-                List.of(),
-                List.of(new TagEntity("tag2", "desc", Map.of()), new TagEntity("tag3", "desc", Map.of()))))).isTrue();
+        assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity(
+                        "adapter3",
+                        "protocolId",
+                        1,
+                        Map.of(),
+                        List.of(),
+                        List.of(),
+                        List.of(new TagEntity("tag2", "desc", Map.of()), new TagEntity("tag3", "desc", Map.of())))))
+                .isTrue();
 
         assertThat(protocolAdapterExtractor.getAllConfigs()).hasSize(3);
 
         // Update adapter1 to have tags [tag1, tag3] - tag3 exists in other adapters, should succeed
-        assertThat(protocolAdapterExtractor.updateAdapter(new ProtocolAdapterEntity("adapter1",
-                "protocolId",
-                1,
-                Map.of(),
-                List.of(),
-                List.of(),
-                List.of(new TagEntity("tag1", "desc", Map.of()), new TagEntity("tag3", "desc", Map.of()))))).isTrue();
+        assertThat(protocolAdapterExtractor.updateAdapter(new ProtocolAdapterEntity(
+                        "adapter1",
+                        "protocolId",
+                        1,
+                        Map.of(),
+                        List.of(),
+                        List.of(),
+                        List.of(new TagEntity("tag1", "desc", Map.of()), new TagEntity("tag3", "desc", Map.of())))))
+                .isTrue();
 
         // Delete adapter2
         assertThat(protocolAdapterExtractor.deleteAdapter("adapter2")).isTrue();
         assertThat(protocolAdapterExtractor.getAllConfigs()).hasSize(2);
 
         // Re-add adapter2 with all shared tags - should succeed
-        assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity("adapter2",
-                "protocolId",
-                1,
-                Map.of(),
-                List.of(),
-                List.of(),
-                List.of(new TagEntity("tag1", "desc", Map.of()),
-                        new TagEntity("tag2", "desc", Map.of()),
-                        new TagEntity("tag3", "desc", Map.of()))))).isTrue();
+        assertThat(protocolAdapterExtractor.addAdapter(new ProtocolAdapterEntity(
+                        "adapter2",
+                        "protocolId",
+                        1,
+                        Map.of(),
+                        List.of(),
+                        List.of(),
+                        List.of(
+                                new TagEntity("tag1", "desc", Map.of()),
+                                new TagEntity("tag2", "desc", Map.of()),
+                                new TagEntity("tag3", "desc", Map.of())))))
+                .isTrue();
 
         assertThat(protocolAdapterExtractor.getAllConfigs()).hasSize(3);
     }
@@ -1033,14 +1084,14 @@ public class ProtocolAdapterExtractorTest {
         assertThat(protocolAdapterExtractor.getAllConfigs()).hasSize(2);
 
         // Verify both adapters have the same tag name
-        assertThat(protocolAdapterExtractor.getAdapterByAdapterId("adapter1")).isPresent()
-                .hasValueSatisfying(adapter -> assertThat(adapter.getTags()
-                        .getFirst()
-                        .getName()).isEqualTo("sharedTag"));
-        assertThat(protocolAdapterExtractor.getAdapterByAdapterId("adapter2")).isPresent()
-                .hasValueSatisfying(adapter -> assertThat(adapter.getTags()
-                        .getFirst()
-                        .getName()).isEqualTo("sharedTag"));
+        assertThat(protocolAdapterExtractor.getAdapterByAdapterId("adapter1"))
+                .isPresent()
+                .hasValueSatisfying(adapter ->
+                        assertThat(adapter.getTags().getFirst().getName()).isEqualTo("sharedTag"));
+        assertThat(protocolAdapterExtractor.getAdapterByAdapterId("adapter2"))
+                .isPresent()
+                .hasValueSatisfying(adapter ->
+                        assertThat(adapter.getTags().getFirst().getName()).isEqualTo("sharedTag"));
     }
 
     @Test
